JS与OC的交互初步完成

--- a/XXKit/UI/OCAndJS/ocandjs.html
+++ b/XXKit/UI/OCAndJS/ocandjs.html
@@ -12,6 +12,10 @@
             {
                 alert(document.title);
             }
+            function showTitleMessage(message)
+            {
+                alert(message);
+            }
             function repost()
             {
                 location.href = "http://www.iosxxx.com";
@@ -22,7 +26,8 @@
             }
             function btnClick()
             {
-                location.href = "xmg://call";
+<!--xmg://sendMessageWithNumber_andContent_?10086&love-->
+                location.href = "xmg://callWithNumber_?35";
             }
         </script>
     </head>
